# sixsight

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  cliff.toml  pyproject.toml
.claude/commands/: analyse.md  commit-plan.md  commit.md  squash.md
.github/: copilot-instructions.md  release.yml
.github/workflows/: ci.yml  deploy-web.yml  release.yml
data/meta/ttc-subway-delay-data/: codes_categories.csv
notebooks/: building-permits-active-permits_analysis.ipynb  traffic_collision_analysis.ipynb  ttc_delay_analysis.ipynb  ttc_delays_by_category.ipynb
src/sixsight/: __init__.py  __main__.py  config.py
src/sixsight/cli/: app.py  ttc_subway_delay.py
src/sixsight/ingestion/: client.py
src/sixsight/models/: dataset.py
src/sixsight/transforms/: pipeline.py  ttc_subway_delay.py
src/sixsight/viz/: charts.py
tests/: conftest.py
tests/cli/: test_app.py
tests/ingestion/: test_client.py
tests/transforms/: test_pipeline.py  test_ttc_subway_delay.py
web/: index.html  package-lock.json  package.json  vite.config.js
web/public/: CNAME
web/public/data/: monthly.csv  monthly_by_category.csv
web/src/: App.jsx  index.css
web/src/components/: Footer.jsx  Header.jsx  Hero.jsx  SubwayDelays.jsx
web/src/hooks/: useCSV.js
