[project]
name = "sixsight"
version = "0.1.0"
description = "Open-source analytics platform for City of Toronto open data"
authors = [
    { name = "Lacuna", email = "lacuna.core@gmail.com" }
]
requires-python = ">=3.14"
dependencies = [
    "httpx>=0.28.1",
    "ipykernel>=7.2.0",
    "loguru>=0.7.3",
    "polars[all]>=1.40.1",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.1",
    "python-dotenv>=1.2.2",
    "rich>=14.3.4",
    "typer>=0.25.1",
]

[project.scripts]
sixsight = "sixsight:main"
ss = "sixsight:main"

[build-system]
requires = ["uv_build>=0.9.7,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "mypy>=2.0.0",
    "pre-commit>=4.6.0",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.12",
]

[tool.ruff]
line-length = 100
target-version = "py314"
include = ["src/**/*.py", "tests/**/*.py"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.ruff.lint.flake8-bugbear]
extend-immutable-calls = ["typer.Argument", "typer.Option"]

[tool.ruff.lint.per-file-ignores]
"src/sixsight/__init__.py" = ["E402"]

[tool.ruff.lint.isort]
known-first-party = ["sixsight"]

[tool.mypy]
python_version = "3.14"
strict = true
files = ["src", "tests"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "--cov=sixsight --cov-report=term-missing -q"

[tool.coverage.run]
source = ["src/sixsight"]
omit = ["*/__init__.py"]
